# build-geometry

./: Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: app.rs  lib.rs
backend/src/data/: color.rs  dirty_flag.rs  graph.rs  matrix.rs  mod.rs
backend/src/renderer/: effects.wgsl  mod.rs  shader.wgsl
backend/src/scene_system/: controller.rs  mod.rs  scene.rs  shader.wgsl
build-geometry/: Cargo.toml
build-geometry/src/: lib.rs  main.rs
build-geometry/src/game_system/: mod.rs  shader.wgsl
editor/: Cargo.toml
editor/src/: main.rs
editor/src/ui_system/: egui.style.json  game_ctrl.rs  mod.rs  style_editor.rs
